fixed hr alignment on edge

--- a/styles/style.css
+++ b/styles/style.css
@@ -369,7 +369,7 @@ position: relative;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 5px;
-    margin-top: 15vh;
+    margin-top: 16vh;
     width: 51%;
     float: right;
     z-index: 0;
@@ -447,23 +447,29 @@ position: relative;
     margin-top: 30px;
 }
 
-#showcase .scroll {
+@supports (-ms-ime-align:auto) {
+    #showcase hr {
+        margin-right: auto;
+    }
+}
+
+/* #showcase .scroll {
     margin-top: 90vh;
     width: 100%;
     text-align: center;
     padding-bottom: 10px;
-}
+} */
 
-#showcase .scroll img {
+/* #showcase .scroll img {
     width: 35px;
     margin: auto;
     -webkit-filter: drop-shadow(2px 2px 3px #ADADAD);
     filter: drop-shadow(2px 2px 3px #ADADAD);
-}
+} */
 
 /* start BOUNCE EFFECT ----------------------------------------*/
 
-@-webkit-keyframes bounce {
+/* @-webkit-keyframes bounce {
 	0%, 20%, 50%, 80%, 100% { -webkit-transform: translateY(0); transform: translateY(0); }
 	40% { -webkit-transform: translateY(-7px); transform: translateY(-7px); }
 	60% { -webkit-transform: translateY(-4px); transform: translateY(-4px); }
@@ -482,7 +488,7 @@ position: relative;
 .bounce:hover {
 	-webkit-animation: none;
     animation: none;
-}
+} */
 
 /* --------------------------------------------------- end bounce effect */
 
@@ -592,6 +598,12 @@ position: relative;
     width:25%;
     margin: 0;
     margin-top: 30px;
+}
+
+@supports (-ms-ime-align:auto) {
+    .hero-banner hr {
+        margin-right: auto;
+    }
 }
 
 .hero-banner h1 {
@@ -1134,6 +1146,12 @@ position: relative;
     margin-bottom: 25px;
 }
 
+@supports (-ms-ime-align:auto) {
+    .box_interact_text hr {
+        margin-right: auto;
+    }
+}
+
 .box_interact {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1264,6 +1282,12 @@ position: relative;
 .mid_sign_text hr {
     width: 200px;
     margin: 0;
+}
+
+@supports (-ms-ime-align:auto) {
+    .mid_sign_text hr {
+        margin-right: auto;
+    }
 }
 
 .mid_sign_text p {
@@ -1695,6 +1719,12 @@ position: relative;
     margin: 0;
     margin-top: 10px;
     margin-bottom: 10px;
+}
+
+@supports (-ms-ime-align:auto) {
+    .videowall hr {
+        margin-right: auto;
+    }
 }
 
 .icon1 {
@@ -2984,9 +3014,9 @@ footer {
        min-height: 100%;
     }
 
-    #showcase .scroll {
+    /* #showcase .scroll {
         display: none;
-    }
+    } */
 
     .hero-button {
         margin-bottom: 60px;
